--- a/app/views/static_pages/_footer.html.erb
+++ b/app/views/static_pages/_footer.html.erb
@@ -2,30 +2,30 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <h3>Menu</h3>
+            <h3>Меню</h3>
             <ul class="nav-footer">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Pages</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Contact</a></li>
+              <li class="active"><a href="#">Главная</a></li>
+              <li><a href="#">О бирже</a></li>
+              <li><a href="#">Для копирайтеров</a></li>
+              <li><a href="#">Для заказчиков</a></li>
+              <li><a href="#">Статьи</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
           </div>
           <div class="col-md-4">
-            <h3>Testmonials</h3>
-            <p class="testimonial">Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
-            <p class="author">lkokosz</p>
-            <p class="testimonial">Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
-            <p class="author">lkokosz</p>
+            <h3>Новости</h3>
+            <p class="testimonial">Текст первой новости. Текст первой новости и второе предложение этого текста. Было бы здорово новости закончить.</p>
+            <p class="author">Дмитрий Иванов</p>
+            <p class="testimonial">Краткое описание второй новости на сайте. Новости берутся из раздела .</p>
+            <p class="author">Игорь Васильев</p>
           </div>
           <div class="col-md-5">
-            <h3>Contact us</h3>
+            <h3>Задать вопрос</h3>
             <form class="form-horizontal" role="form">
               <div class="form-group">
-                <label for="inputName1" class="col-lg-3 control-label">Name</label>
+                <label for="inputName1" class="col-lg-3 control-label">Имя</label>
                 <div class="col-lg-9">
-                  <input type="text" class="form-control input-lg" id="inputName1" placeholder="Name">
+                  <input type="text" class="form-control input-lg" id="inputName1" placeholder="Ваше имя">
                 </div>
               </div>
               <div class="form-group">
@@ -35,14 +35,14 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="inputContent1" class="col-lg-3 control-label">Content</label>
+                <label for="inputContent1" class="col-lg-3 control-label">Текст</label>
                 <div class="col-lg-9">
-                  <textarea id="inputContent1" class="form-control" rows="3"></textarea>
+                  <textarea id="inputContent1" class="form-control" rows="3" placeholder="Текст вопроса"></textarea>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-lg-offset-3 col-lg-9">
-                  <button type="submit" class="btn btn-lead btn-lg">Send us an email</button>
+                  <button type="submit" class="btn btn-lead btn-lg">Отправить</button>
                 </div>
               </div>
             </form>
@@ -53,7 +53,7 @@
             <hr>
             <div class="row">
               <div class="col-md-6">
-                All rights reserved &copy; 2013 <a href="http://w3widgets.com">w3widgets.com</a>
+                Все права защищены &copy; 2013 <a href="http://infotechcom.ru" target="blank">ООО "Инфоком-НН"</a>
               </div>
               <div class="col-md-6">
                 <p class="social">
