--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,15 @@
+<% provide(:title, 'Помощь') %>
+
+<!-- Breadcrumbs - START -->
+<div class="background-clouds breadcrumbs-container">
+  <div class="container">
+    <ol class="breadcrumb">
+      <li><a href="/index.html">Главная</a></li>
+      <li class="active">Помощь</li>
+    </ol>
+  </div>
+</div>
+<!-- Breadcrumbs - END -->
+
 <h1>StaticPages#help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
