Working with disign

--- a/app/views/clients/home.html.erb
+++ b/app/views/clients/home.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'Все проекты') %>
+
 <!-- Breadcrumbs - START -->
 <div class="background-clouds breadcrumbs-container">
   <div class="container">
