--- a/app/views/clients/_leftmenu.html.erb
+++ b/app/views/clients/_leftmenu.html.erb
@@ -3,16 +3,16 @@
 
             <div class="list-group bright background-clouds color-text">
               <div class="list-group-item"><h3>Меню клиента</h3></div>
-              <a href="#" class="list-group-item">Профиль пользователя</a>
+              <a href="#" class="list-group-item">Личный кабинет</a>
               <a href="#" class="list-group-item">Сообщения</a>
-              <a href="#" class="list-group-item">Пополнить счёт</a>
-              <a href="#" class="list-group-item">Список копирайтеров</a>
-              <a href="#" class="list-group-item">Готовые тексты по категориям</a>
+              <a href="/clients/pay.html" class="list-group-item">Пополнить счёт</a>
+              <a href="/clients/copy.html" class="list-group-item">Список копирайтеров</a>
+              <a href="/clients/articles.html" class="list-group-item">Готовые тексты по категориям</a>
             </div>
             <ul class="list-group background-lead color-white">
               <li class="list-group-item">
                 <span class="badge background-white color-lead">14</span>
-                <a href="#">Ваши проекты</a>
+                <a href="/clients/home.html">Ваши проекты</a>
               </li>
               <li class="list-group-item">
                 <span class="badge background-white color-lead">14</span>
