Add gems and copirighters views

--- a/app/views/users/signup_copy.html.erb
+++ b/app/views/users/signup_copy.html.erb
@@ -49,7 +49,7 @@
             <div class="thumbnail info-thumbnail background-emerald">
               <div class="caption">
                 <h3><span class="fa fa-user"></span> Логин</h3>
-                <form role="form">
+                <form role="form" action="/copyrighters/profile.html">
                   <div class="form-group">
                     <label for="exampleInputEmail3">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Ваша электронная почта">
