--- a/app/views/copyrighters/_leftmenu.html.erb
+++ b/app/views/copyrighters/_leftmenu.html.erb
@@ -3,24 +3,20 @@
 
             <div class="list-group bright background-clouds color-text">
               <div class="list-group-item"><h3>Меню клиента</h3></div>
-              <a href="/clients/profile.html" class="list-group-item">Личный кабинет</a>
-              <a href="/clients/messages.html" class="list-group-item">Сообщения</a>
-              <a href="/clients/pay.html" class="list-group-item">Пополнить счёт</a>
-              <a href="/clients/copy.html" class="list-group-item">Список копирайтеров</a>
-              <a href="/clients/articles.html" class="list-group-item">Готовые тексты по категориям</a>
+              <a href="/copyrighters/profile.html" class="list-group-item">Личный кабинет</a>
+              <a href="/copyrighters/messages.html" class="list-group-item">Сообщения</a>
+              <a href="/copyrighters/pull.html" class="list-group-item">Вывести средства</a>
+              <a href="/copyrighters/copy.html" class="list-group-item">Список копирайтеров</a>
+              <a href="/copyrighters/articles.html" class="list-group-item">Готовые тексты по категориям</a>
             </div>
             <ul class="list-group background-lead color-white">
               <li class="list-group-item">
                 <span class="badge background-white color-lead">14</span>
-                <a href="/clients/home.html">Ваши проекты</a>
+                <a href="/clients/home.html">Новые заказы</a>
               </li>
               <li class="list-group-item">
-                <span class="badge background-white color-lead">14</span>
+                <span class="badge background-white color-lead">4</span>
                 <a href="/clients/complite.html">Выполненные заказы</a>
-              </li>
-              <li class="list-group-item">
-                <span class="badge background-white color-lead">2</span>
-                <a href="/clients/wait.html">Заказы в ожидании</a>
               </li>
               <li class="list-group-item">
                 <span class="badge background-white color-lead">1</span>
