--- a/app/views/static_pages/articles.html.erb
+++ b/app/views/static_pages/articles.html.erb
@@ -11,5 +11,169 @@
 </div>
 <!-- Breadcrumbs - END -->
 
-<h1>StaticPages#articles</h1>
-<p>Find me in app/views/static_pages/articles.html.erb</p>
+ <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-9">
+            <div class="media blog-entry">
+              <div class="pull-left">
+                <img class="media-object" src="img/placeholder-heli-small.jpg" alt="...">
+              </div>
+              <div class="media-body">
+                <div class="blog-entry-content">
+                  <div class="category">Webdesign</div>
+                  <h2><a href="#">Entry title</a></h2>
+                  <div class="date">2013.11.30 16:34, <a href="">4 <sup><span class="fa fa-comment-o"></span></sup></a></div>
+                  <div class="content">
+                    <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
+
+                    <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh. <a href="#">Read more <span class="fa fa-long-arrow-right"></span></a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="media blog-entry">
+              <div class="pull-left">
+                <img class="media-object" src="img/placeholder-heli-small.jpg" alt="...">
+              </div>
+              <div class="media-body">
+                <div class="blog-entry-content">
+                  <div class="category">Webdesign</div>
+                  <h2><a href="#">Entry title</a></h2>
+                  <div class="date">2013.11.30 16:34, <a href="">4 <sup><span class="fa fa-comment-o"></span></sup></a></div>
+                  <div class="content">
+                    <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
+
+                    <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh. <a href="#">Read more <span class="fa fa-long-arrow-right"></span></a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="media blog-entry">
+              <div class="pull-left">
+                <img class="media-object" src="img/placeholder-heli-small.jpg" alt="...">
+              </div>
+              <div class="media-body">
+                <div class="blog-entry-content">
+                  <div class="category">Webdesign</div>
+                  <h2><a href="#">Entry title</a></h2>
+                  <div class="date">2013.11.30 16:34, <a href="">4 <sup><span class="fa fa-comment-o"></span></sup></a></div>
+                  <div class="content">
+                    <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
+
+                    <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh. <a href="#">Read more <span class="fa fa-long-arrow-right"></span></a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="media blog-entry">
+              <div class="pull-left">
+                <img class="media-object" src="img/placeholder-heli-small.jpg" alt="...">
+              </div>
+              <div class="media-body">
+                <div class="blog-entry-content">
+                  <div class="category">Webdesign</div>
+                  <h2><a href="#">Entry title</a></h2>
+                  <div class="date">2013.11.30 16:34, <a href="">4 <sup><span class="fa fa-comment-o"></span></sup></a></div>
+                  <div class="content">
+                    <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
+
+                    <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh. <a href="#">Read more <span class="fa fa-long-arrow-right"></span></a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <!-- Responsive calendar - START -->
+            <div class="responsive-calendar background-lead-dark color-white">
+              <div class="controls">
+                  <a class="btn btn-lead pull-left" data-go="prev"><i class="fa fa-chevron-left"></i></a>
+                  <a class="btn btn-lead pull-right" data-go="next"><i class="fa fa-chevron-right"></i></a>
+                  <h4 class="timeInfo"></h4>
+              </div>
+              <div class="day-headers">
+                <div class="day header">Mon</div>
+                <div class="day header">Tue</div>
+                <div class="day header">Wed</div>
+                <div class="day header">Thu</div>
+                <div class="day header">Fri</div>
+                <div class="day header">Sat</div>
+                <div class="day header">Sun</div>
+              </div>
+              <div class="days" data-group="days">
+                <!-- the place where days will be generated -->
+              </div>
+            </div>
+            <!-- Responsive calendar - END -->
+            <h3>Archives</h3>
+            <ul class="side-list">
+              <li><a href="#">August 2013</a></li>
+              <li><a href="#">September 2013</a></li>
+              <li><a href="#">October 2013</a></li>
+              <li><a href="#">November 2013</a></li>
+              <li><a href="#">December 2013</a></li>
+            </ul>
+            <h3>Category</h3>
+            <ul class="side-list">
+              <li><a href="#">Webdesign</a></li>
+              <li><a href="#">Programming</a></li>
+              <li><a href="#">Freebies</a></li>
+              <li><a href="#">Others</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="reduce-top-margin">
+          <h1>This is us</h1>
+          <div class="row">
+            <div class="col-md-2">
+              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
+                <img class="img-circle" src="img/placeholder-man-sq.jpg" alt="...">
+              </a>
+              <br>
+              <p class="text-center"><small>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat.</small></p>
+            </div>
+            <div class="col-md-2">
+              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
+                <img class="img-circle" src="img/placeholder-office-couple-sq.jpg" alt="...">
+              </a>
+              <br>
+              <p class="text-center"><small>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat.</small></p>
+            </div>
+            <div class="col-md-2">
+              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
+                <img class="img-circle" src="img/placeholder-heli-sq.jpg" alt="...">
+              </a>
+              <br>
+              <p class="text-center"><small>Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh.</small></p>
+            </div>
+            <div class="col-md-2">
+              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
+                <img class="img-circle" src="img/placeholder-office-couple-sq.jpg" alt="...">
+              </a>
+              <br>
+              <p class="text-center"><small>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat.</small></p>
+            </div>
+            <div class="col-md-2">
+              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
+                <img class="img-circle" src="img/placeholder-heli-sq.jpg" alt="...">
+              </a>
+              <br>
+              <p class="text-center"><small>Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh.</small></p>
+            </div>
+            <div class="col-md-2">
+              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
+                <img class="img-circle" src="img/placeholder-man-sq.jpg" alt="...">
+              </a>
+              <br>
+              <p class="text-center"><small>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat.</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
