--- a/app/views/users/signup_client.html.erb
+++ b/app/views/users/signup_client.html.erb
@@ -49,7 +49,7 @@
             <div class="thumbnail info-thumbnail background-emerald">
               <div class="caption">
                 <h3><span class="fa fa-user"></span> Логин</h3>
-                <form role="form" action="/clients/home.html">
+                <form role="form" action="/clients/profile.html">
                   <div class="form-group">
                     <label for="exampleInputEmail3">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Ваша электронная почта">
@@ -68,6 +68,7 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </section>
