--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -116,42 +116,4 @@
 
     <!-- Info thumbnails - END -->
 
-    <section class="image-bg color-white" style="background-image: url(/image-bg.jpg)">
-      <div class="container">
-        <div class="reduce-top-margin">
-          <h1 class="no-border">Популярные копирайтеры</h1>
-          <div class="row">
-            <div class="col-xs-6 col-sm-4 col-md-2">
-              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
-                <img class="img-circle" src="/img/w3w-logo.png" alt="...">
-              </a>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
-                <img class="img-circle" src="/img/w3w-logo-2.png" alt="...">
-              </a>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
-                <img class="img-circle" src="/img/w3w-logo-3.png" alt="...">
-              </a>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
-                <img class="img-circle" src="/img/2.jpg" alt="...">
-              </a>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
-                <img class="img-circle" src="/img/w3w-logo.png" alt="...">
-              </a>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-              <a href="http://w3widget.com" class="thumbnail gallery-thumbnail">
-                <img class="img-circle" src="/img/w3w-logo-3.png" alt="...">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+<%= render '/shared/popular' %>
