--- a/app/views/clients/_leftmenu.html.erb
+++ b/app/views/clients/_leftmenu.html.erb
@@ -4,7 +4,7 @@
             <div class="list-group bright background-clouds color-text">
               <div class="list-group-item"><h3>Меню клиента</h3></div>
               <a href="/clients/profile.html" class="list-group-item">Личный кабинет</a>
-              <a href="/clients/messages.html" class="list-group-item">Сообщения</a>
+              <%= link_to "Сообщения", messages_path, :class => "list-group-item" %>
               <a href="/clients/pay.html" class="list-group-item">Пополнить счёт</a>
               <a href="/clients/copy.html" class="list-group-item">Список копирайтеров</a>
               <a href="/clients/articles.html" class="list-group-item">Готовые тексты по категориям</a>
