--- a/app/views/copyrighters/messages.html.erb
+++ b/app/views/copyrighters/messages.html.erb
@@ -35,6 +35,7 @@
       <table class="table table-hover">
         <thead>
           <tr>
+            <%= render mailbox.inbox %>
             <th>Аватар</th>
             <th>Имя</th>
             <th>Новых сообщений</th>
@@ -50,7 +51,7 @@
           </tr>
         </tbody>
       </table>
-
+<%= link_to 'Start Conversation', :new_conversation %>
                   </div>
                 </div>
 
