--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,7 @@
 
     <section>
       <div class="container">
+      	  <%= devise_error_messages! %>
         <h1>Регистрация для заказчиков контента</h1>
         <div class="row">
           <div class="col-sm-7 col-md-offset-1 col-md-6">
