--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6 col-md-6">
-            <a class="info-thumbnail-link" href="/users/sign_in">
+            <a class="info-thumbnail-link" href="/users/sign_up">
             <div class="thumbnail info-thumbnail background-carrot">
               <div class="caption">
                 <h3><span class="fa fa-flag color-lead"></span> Для копирайтеров</h3>
