--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -1,3 +1,4 @@
+<% if !user_signed_in? %>
     <nav id="mainMenu" class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -65,8 +66,8 @@
               </ul>
             </li>
             <% else %>
-<li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
-<% end %>
+              <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
+            <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
@@ -114,3 +115,5 @@
       });
     });
     </script>
+
+<% end %>
