--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,6 +30,10 @@
                     <label for="exampleInputEmail13">Email</label>
                     <%= f.email_field :email, :class => "form-control", :placeholder => "Ваша электронная почта" %>
                   </div>
+                                    <div class="form-group">
+                    <label for="exampleInputPassword13">Пароль</label>
+                    <%= f.collection_select :role, User::ROLES, :to_s, :humanize %>
+                  </div>
                   <div class="form-group">
                     <label for="exampleInputPassword13">Пароль</label>
                     <%= f.password_field :password, :class => "form-control", :placeholder => "Введите пароль" %>
