--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -1,4 +1,3 @@
-<% if !user_signed_in? %>
     <nav id="mainMenu" class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -66,6 +65,7 @@
               </ul>
             </li>
             <% else %>
+            <li><%= link_to('Личный кабинет', current_user) %> </li>
               <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
             <% end %>
           </ul>
@@ -115,5 +115,3 @@
       });
     });
     </script>
-
-<% end %>
