--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,27 @@
-<% provide(:title, 'Спиосок копирайтеров') %>
+<% provide(:title, current_user.username) %>
+
 
 <!-- Breadcrumbs - START -->
 <div class="background-clouds breadcrumbs-container">
   <div class="container">
     <ol class="breadcrumb">
-      <li class="active">Личный кабинет</li>
+      <li><a href="/index.html">Главная</a></li>
+      <li class="active"><%= current_user.username %></li>
     </ol>
   </div>
 </div>
 <!-- Breadcrumbs - END -->
 
-  <section>
+ <section>
       <div class="container">
         <div class="row">
-<%= render "leftmenu" %>
+<% if current_user.role == "client" %>
+<%= render "/clients/leftmenu" %>
+<% elsif current_user.role == "copy" %>
+<%= render "/copyrighters/leftmenu" %>
+<% elsif current_user.role == "admin" %>
+<%= render "/admins/leftmenu" %>
+<% end %>
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-12">
