--- a/app/views/clients/_leftmenu.html.erb
+++ b/app/views/clients/_leftmenu.html.erb
@@ -6,28 +6,32 @@
               <%= link_to "Личный кабинет", current_user, :class => "list-group-item" %>
               <%= link_to "Сообщения", messages_path, :class => "list-group-item" %>
               <a href="/clients/pay.html" class="list-group-item">Пополнить счёт</a>
-              <a href="/clients/copy.html" class="list-group-item">Список копирайтеров</a>
+              <%= link_to "Список копирайтеров", users_path, :class => "list-group-item" %>
               <a href="/clients/articles.html" class="list-group-item">Готовые тексты по категориям</a>
             </div>
             <ul class="list-group background-lead color-white">
               <li class="list-group-item">
-                <span class="badge background-white color-lead">14</span>
+                <span class="badge background-white color-lead"><%= current_user.projects.count %></span>
                 <a href="/projects">Ваши проекты</a>
               </li>
               <li class="list-group-item">
-                <span class="badge background-white color-lead">14</span>
+                <%= "<span class='badge background-white color-lead'>#{current_user.orders.where(:status => 4).count}</span>".html_safe if !current_user.orders.where(:status => 4).empty? %>
                 <a href="/clients/complite.html">Выполненные заказы</a>
               </li>
               <li class="list-group-item">
-                <span class="badge background-white color-lead">2</span>
+                <%= "<span class='badge background-white color-lead'>#{current_user.orders.where(:status => 3).count}</span>".html_safe if !current_user.orders.where(:status => 3).empty? %>
+                <a href="/clients/check.html">На проверку </a>
+              </li>
+              <li class="list-group-item">
+                <%= "<span class='badge background-white color-lead'>#{current_user.orders.where(:status => 2).count}</span>".html_safe if !current_user.orders.where(:status => 2).empty? %>
+                <a href="/clients/work.html">Заказы в работе </a>
+              </li>
+              <li class="list-group-item">
+                <%= "<span class='badge background-white color-lead'>#{current_user.orders.where(:status => 0).count}</span>".html_safe if !current_user.orders.where(:status => 0).empty? %>
                 <a href="/clients/wait.html">Заказы в ожидании</a>
               </li>
               <li class="list-group-item">
-                <span class="badge background-white color-lead">1</span>
-                <a href="/clients/work.html"> Заказы в работе </a>
-              </li>
-              <li class="list-group-item">
-                <span class="badge background-white color-lead">1</span>
+                <%= "<span class='badge background-white color-lead'>#{current_user.orders.where(:status => 1).count}</span>".html_safe if !current_user.orders.where(:status => 1).empty? %>
                 <a href="/clients/correct.html">Заказы на корректировке</a>
               </li>
             </ul>
