--- a/app/views/clients/work.html.erb
+++ b/app/views/clients/work.html.erb
@@ -26,21 +26,23 @@
           <tr>
             <th>ID</th>
             <th>Наименование</th>
-            <th>Дата заказа</th>
+            <th>Проект</th>
             <th>Стоимость</th>
             <th>Автор</th>
             <th>Статус</th>
           </tr>
         </thead>
         <tbody>
+          <% @orders.each do |order| %>
           <tr>
-            <td>1</td>
+            <td><%= order.id %></td>
+            <td><%= link_to order.name, project_order_url(order.project, order) %></td>
+            <td><%= link_to order.project.name, order.project %></td>
             <td>Column content</td>
             <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
+            <td><%= order.complite? %></td>
           </tr>
+          <% end %>
         </tbody>
       </table>
 
