--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,134 @@
-<h1>Projects#show</h1>
-<p>Find me in app/views/projects/show.html.erb</p>
+<% provide(:title, 'Все проекты') %>
+
+<!-- Breadcrumbs - START -->
+<div class="background-clouds breadcrumbs-container">
+  <div class="container">
+    <ol class="breadcrumb">
+      <li><%= link_to "Ваши проекты", projects_path %></li>
+      <li class="active"><%= @project.name %></li>
+    </ol>
+  </div>
+</div>
+<!-- Breadcrumbs - END -->
+
+  <section>
+      <div class="container">
+        <div class="row">
+<%= render "/clients/leftmenu" %>
+          <div class="col-md-9">
+            <div class="row">
+
+              <div class="col-md-12">
+                <h1><%= "Проект #{@project.name}" %></h1>
+                <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
+                	<div class="caption background-white">
+  <% if !@project.orders.empty? %>  
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Наименование</th>
+            <th>Кол-во знаков</th>
+            <th>Стоимость</th>
+            <th>Статус</th>
+            <th>Действие</th>
+          </tr>
+        </thead>
+        <tbody>
+
+    <% @project.orders.each do |order| %>
+            <tr>
+              <td><%= order.id %></td>
+              <td><%= link_to order.name, project_order_url(@project, order) %></td>
+              <td><%= order.amount %></td>
+              <td>199 руб.</td>
+              <td><%= order.complite? %></td>
+              <td>Изменить, Удалить</td>
+            </tr>
+    <% end %>
+        </tbody>
+      </table>
+  <% else %>
+    <p>Пока не создано ни одной заявки.</p>
+  <% end %>
+                	</div>
+                </div>
+			  </div>
+
+              <div class="col-md-12">
+                <h1>Создать новый заказ</h1>
+                <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
+                  <div class="caption background-white">
+
+                    <blockquote>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                      <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+                    </blockquote>
+                  </div>
+                </div>
+                <br>
+                <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
+                  <div class="caption background-white">
+<% if !@project.orders.last %>
+				      <%= form_for @order, :url => {:controller => 'projects', :action => 'create_order'} do |f| %>
+				      	<div class="form-group">
+				        	<%= f.text_field :name, :class => "form-control", :placeholder => "Краткое описание заказа" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.text_field :keywords, :class => "form-control", :placeholder => "Ключевые слова" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.text_area :description, :size => "60x8", :class => "form-control", :placeholder => "Подробности заказа" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.number_field :pictures, :class => "form-control", :placeholder => "Кол-во картинок" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.select :resolution, [["320*240", 1], ["640*480", 2], ["800*600", 3], ["1024*600", 4]] %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.select :amount, ["500", "1200", "2300", "4400"] %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.number_field :finish_date, :class => "form-control", :placeholder => "Срок выполнения (в днях)" %>
+				      	</div>
+
+
+				      	    <%= f.submit "Создать", :class => "btn btn-primary" %>
+				      <% end %>
+<% else %>
+				      <%= form_for @order, :url => {:controller => 'projects', :action => 'create_order'} do |f| %>
+				      	<div class="form-group">
+				        	<%= f.text_field :name, :class => "form-control", :value => "#{@project.orders.last.name}" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.text_field :keywords, :class => "form-control", :value => "#{@project.orders.last.keywords}" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.text_area :description, :size => "60x8", :class => "form-control", :value => "#{@project.orders.last.description}" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.number_field :pictures, :class => "form-control", :value => "#{@project.orders.last.pictures}" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.select :resolution, [["320*240", 1], ["640*480", 2], ["800*600", 3], ["1024*600", 4]], :selected => "#{@project.orders.last.resolution}" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.select :amount, ["500", "1200", "2300", "4400"], :selected => "#{@project.orders.last.amount}" %>
+				      	</div>
+				      	<div class="form-group">
+				        	<%= f.number_field :finish_date, :class => "form-control", :value => "#{@project.orders.last.finish_date}" %>
+				      	</div>
+				      	    <%= f.submit "Создать", :class => "btn btn-primary" %>
+				      <% end %>
+<% end %>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
