--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,48 +13,57 @@
   <section>
       <div class="container">
         <div class="row">
-<%= render "leftmenu" %>
+<%= render "/clients/leftmenu" %>
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-12">
-                <h1>Ваши сообщения</h1>
-
+                <h1>Список копирайтеров</h1>
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
-<h4>Последнее сообщение</h4>
-<p>Текста последнего сообщения. Текста последнего сообщения. Текста последнего сообщения. Текста последнего сообщения. Текста последнего сообщения.</p>
-<p><strong>Иванов Иван</strong> 12.04.2013</p>
+                    <form class="form-horizontal" role="form">
+                      <div class="form-group">
+                        <lable><strong>Фильтр по категориям</strong></lable>
+                        <select multiple class="form-control">
+                          <option>Автомобили</option>
+                          <option>Велосипеды</option>
+                          <option>Компьютеры</option>
+                          <option>Креатив</option>
+                          <option>Строительство</option>
+                        </select>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Выбрать</button>
+                    </form>
+
 
                   </div>
                 </div>
-<br>
-
+                <br>
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
-<h4>Все сообщения</h4>
+
       <table class="table table-hover">
         <thead>
           <tr>
-            <%= render mailbox.inbox %>
             <th>Аватар</th>
             <th>Имя</th>
-            <th>Новых сообщений</th>
-            <th>Всего сообщений</th>
+            <th>Выполненные заказы</th>
+            <th>Уровень</th>
           </tr>
         </thead>
         <tbody>
+          <% @copies.each do |copy| %>
           <tr>
             <td>1</td>
-            <td>Column content</td>
+            <td><%= link_to copy.username, copy %></td>
             <td>Column content</td>
             <td>Column content</td>
           </tr>
+          <% end %>
         </tbody>
       </table>
-<%= link_to 'Start Conversation', :new_conversation %>
+
                   </div>
                 </div>
-
               </div>
 
 
