--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, current_user.username) %>
+<% provide(:title, @user.username) %>
 
 
 <!-- Breadcrumbs - START -->
@@ -6,7 +6,8 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="/index.html">Главная</a></li>
-      <li class="active"><%= current_user.username %></li>
+      <li><%= link_to "Пользователи", users_path %></a></li>
+      <li class="active"><%= @user.username %></li>
     </ol>
   </div>
 </div>
