--- a/app/views/clients/_leftmenu.html.erb
+++ b/app/views/clients/_leftmenu.html.erb
@@ -4,7 +4,7 @@
             <div class="list-group bright background-clouds color-text">
               <div class="list-group-item"><h3>Меню клиента</h3></div>
               <%= link_to "Личный кабинет", current_user, :class => "list-group-item" %>
-              <%= link_to "Сообщения", messages_path, :class => "list-group-item" %>
+              <%= link_to "Сообщения", discussions_path, :class => "list-group-item" %>
               <a href="/clients/pay.html" class="list-group-item">Пополнить счёт</a>
               <%= link_to "Список копирайтеров", users_path, :class => "list-group-item" %>
               <a href="/clients/articles.html" class="list-group-item">Готовые тексты по категориям</a>
